# peek

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  autogen.sh  configure.ac  main.cpp  makefile  peek.cpp  peek.hpp
src/: Makefile.am  main.cpp  peek.cpp  peek.hpp
test/: 01.tar  04.tgz  05.tbz2  07.bz2  08.rar  10.zoo  11.arj  13.tar.Z  14.7z
tests/: 7z.sh  Ar.sh  Arj.sh  BZ2.sh  Cpio.sh  GZ.sh  Lha.sh  Lzop.sh  Makefile.am  NoFile.sh  Rzip.sh  Shar.sh  Tar.sh  TarBZ2.sh  TarGZ.sh  TarZ.sh  UnkFile.sh  Xar.sh  Z.sh  Zip.sh  Zoo.sh  Zzip.sh
